--- a/html5/HomeWork/HomeWork03/Profile.html
+++ b/html5/HomeWork/HomeWork03/Profile.html
@@ -17,7 +17,11 @@
         <img src="https://wallpapercave.com/wp/kW4D4LE.jpg" aligh="left" width="220" height="220" alt="My Talisman">
     </div>
     <div>
-
+        <p><strong>Name:</strong> Ruslan Kotuk <br>
+            <strong>BirthDate</strong>December, 1996 <br>
+            <strong>Occupation:</strong>Student <br>
+            <strong>Area of Occupation:</strong>IT <br>
+        </p>
     </div>
 </body>
 
