--- a/html5/HomeWork/HomeWork03/Friends.Html
+++ b/html5/HomeWork/HomeWork03/Friends.Html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+    <p>
+        <a href="Friends.html">Friends</a>
+        <a href="Profile.html">Profile</a>
+        <a href="info.html">Additiomal information about Ruslan</a>
+    </p>
     <header>
         <hr>
         <h1>Friends of Ruslan</h1>
