--- a/html5/HomeWork/HomeWork03/Friends.Html
+++ b/html5/HomeWork/HomeWork03/Friends.Html
@@ -15,7 +15,7 @@
     </p>
     <header>
         <hr>
-        <h1>Friends of Ruslan</h1>
+        <h1>Friends of Ruslan</h1>KNB
         <hr>
     </header>
     <div>
