--- a/html5/lesson12/index.html
+++ b/html5/lesson12/index.html
@@ -25,7 +25,7 @@
             ctx1.fillstyle = "rgb(100,0,0)"
             ctx1.fillRect(20, 10, 50, 70);
             ctx2.fillstyle = "rgb(100,0,0)"
-            ctx2.ctx1.fillRect(20, 10, 50, 70);
+            ctx2.fillRect(20, 10, 50, 70);
         }
     </script>
 
