--- a/html51-a/html51-assignment/web-s0302.html
+++ b/html51-a/html51-assignment/web-s0302.html
@@ -1,18 +1,36 @@
 ﻿<!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="expires" content="0" />
     <title>
-        Home Page
+        Form
     </title>
     <meta name="keywords" content="КПНУ, К-ПНУ, Каменец-Подольский национальный университет,
-    физико-математический факультет, моделирование, международная конференция"/>
-    <link href="Content/Site.css" rel="stylesheet" />
+    физико-математический факультет, моделирование, международная конференция" />
+    <link href="Content/.css" rel="stylesheet" />
 </head>
 
 <body>
-    
+    <header>
+        <h1>Регистрация на конференцию</h1>
+    </header>
+    <P> Начало Формы</p>
+    <hr>
+    <form action="Form" name="test" method="POST">
+        <p>
+            <strong> Конференция:</strong> <br> Название конференции <input type="text">
+        </p>
+        <p>Сведения об участнике:</p>
+        <p>Фамилия: <input type="text">
+        </p>
+        <p>Имя: <input type="text">
+        </p>
+        </p>
+
+    </form>
 </body>
+
 </html>
