--- a/html51-a/html51-assignment/web-s0301.html
+++ b/html51-a/html51-assignment/web-s0301.html
@@ -6,7 +6,7 @@
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="expires" content="0" />
     <title>
-        Home Page
+        Sem Test
     </title>
     <meta name="keywords" content="КПНУ, К-ПНУ, Каменец-Подольский национальный университет,
     физико-математический факультет, моделирование, международная конференция" />
@@ -51,9 +51,9 @@
     </strong>
         <p>Регистрация для участия в работе конференции осуществляется по адресу <a href=https://inf.kpnu.edu.ua/optima>http://optima.kpnu.km.ua.</a></p>
         <strong>
-        p> Заявки на участие в конференции и аннотации докладов (до 20 строк) принимаются до <time>    20 марта 2014 года.</time></p>
+        <p> Заявки на участие в конференции и аннотации докладов (до 20 строк) принимаются до <time>    20 марта 2014 года.</time></p>
       
-        <p> Прием статей заканчивается <time> 5 апреля 2014.</time></p>
+      <p> Прием статей заканчивается <time> 5 апреля 2014.</time></p>
         <p> Оргкомитет </p>
     </strong>
     </main>
