--- a/html51-a/html51-assignment/web-s0303.html
+++ b/html51-a/html51-assignment/web-s0303.html
@@ -4,11 +4,8 @@
 <head>
 
     <title>Table Demo</title>
-
     <meta charset="utf-8" />
-
     <script src="Scripts/jquery-3.1.1.min.js"></script>
-
     <script src="Scripts/tablesorter/jquery.tablesorter.combined.min.js"></script>
 
     <style>
@@ -1123,14 +1120,12 @@
         </tbody>
         <tfoot></tfoot>
     </table>
+    </table>
+
     <script>
         $(document).ready(function() {
-
-                $("#myTable").tablesorter();
-
-            }
-
-        );
+            $("my#table").tablesorter();
+        });
     </script>
 </body>
 
