--- a/html51-a/html51-assignment/web-s0303.html
+++ b/html51-a/html51-assignment/web-s0303.html
@@ -5,8 +5,8 @@
 
     <title>Table Demo</title>
     <meta charset="utf-8" />
-    <script src="Scripts/jquery-3.1.1.min.js"></script>
-    <script src="Scripts/tablesorter/jquery.tablesorter.combined.min.js"></script>
+    <script src="Scripts/jquery-3.1.1.js"></script>
+    <script src="Scripts/tablesorter/jquery.tablesorter.combined.js"></script>
 
     <style>
         th {
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <table>
+    <table id="my table">
         <thead>
             <tr>
                 <th> N</th>
