--- a/html51-a/html51-assignment/web-s0302.html
+++ b/html51-a/html51-assignment/web-s0302.html
@@ -19,7 +19,7 @@
     </header>
     <P> Начало Формы</p>
     <hr>
-    <form action="Form.as" id="Registration" method="post">
+    <form action="http://httpbin.org/post" id="Registration" method="post">
         <fieldset>
             <legend> Конференция:</legend>
             <div>
