--- a/html51-a/html51-assignment/web-s0303.html
+++ b/html51-a/html51-assignment/web-s0303.html
@@ -6,8 +6,8 @@
     <title>Table Demo</title>
     <meta charset="utf-8" />
 
-    <script src="scripts/jquery-3.1.1.min.js"></script>
-    <script src="scripts/tablesorter/jquery.tablesorter.combined.min.js"></script>
+    <script src="Scripts/jquery-3.1.1.min.js"></script>
+    <script src="Scripts/tablesorter/jquery.tablesorter.combined.min.js"></script>
     <style>
         th {
             background-color: blue;
