--- a/html51/Practic Java/Practic.html
+++ b/html51/Practic Java/Practic.html
@@ -24,7 +24,7 @@
 
             </div> <br>
             <button onclick="Run()">Розв'язати</button>
-            <hr>
+            <br>
             <output id="res"></output>
         </fieldset>
         <fieldset>
@@ -38,8 +38,32 @@
                 <input type="text" id="y" name="item-y">
             </div> <br>
             <button onclick="Run2()">Розв'язати</button>
-            <hr>
+            <br>
             <output id="res02"></output>
+        </fieldset>
+        <fieldset>
+            <legend>Mission 03</legend>
+            <div>
+                <label for="w">Введіть довжину сторони ребра куба</label>
+                <input type="text" id="w" name="item-w">
+            </div>
+            <button onclick="Run3()">Знайти</button>
+            <br>
+            <output id="res03"></output>
+        </fieldset>
+        <fieldset>
+            <legend>Mision 04</legend>
+            <div>
+                <label for="z"> Число z</label>
+                <input type="text" id="z" name="item-z">
+            </div>
+            <div>
+                <label for="e">Число e</label>
+                <input type="text" id="e" name="item-e">
+            </div>
+            <button onclick="Run4()">Розв'язати</button>
+            <br>
+            <output id="res04"></output>
         </fieldset>
 
     </fieldset>
