--- a/html51/Prc/HomeFun.html
+++ b/html51/Prc/HomeFun.html
@@ -7,22 +7,24 @@
     <title>Text</title>
 </head>
 <style>
-    .big {
-        font-size: 5em;
+    ul {
+        list-style: none;
     }
     
-    span {
-        font-family: serif;
-        vertical-align: -0.2em;
-    }
-    
-    .Ter span {
-        letter-spacing: -0.1;
+    li::before {
+        content: "♠";
+        padding-right: 8px;
+        color: green;
     }
 </style>
 
 <body>
-    <p class="big">Joy of T<span>E</span><span class="Ter">X</span></p>
+    <ul>
+        <li>hjglgvl</li>
+        <li>gvfkhgfy</li>
+        <li>ddyrdy</li>
+        <li>duytdyjd</li>
+    </ul>
 </body>
 
 </html>
