--- a/html51/Prc/HomeFun.html
+++ b/html51/Prc/HomeFun.html
@@ -12,7 +12,7 @@
     }
     
     li::before {
-        content: "♠";
+        content: "♦";
         padding-right: 8px;
         color: green;
     }
