--- a/html51/Prc/HomeFun2.html
+++ b/html51/Prc/HomeFun2.html
@@ -25,11 +25,11 @@
         }
         
         .low::after {
-            width: 30px;
+            width: 20px;
             height: 20px;
             background: red;
-            left: -20px;
-            top: 40px;
+            right: -20px;
+            top: 60px;
         }
     </style>
 </head>
