--- a/html51/bootstrap/index.html
+++ b/html51/bootstrap/index.html
@@ -28,6 +28,19 @@
                     </div>
                 </div>
             </div>
+            .
+            <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+                <a class="navbar-brand" class="active" href="#">Title</a>
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Link</a>
+                    </li>
+                </ul>
+            </nav>
+
 
             <script src="public/js/jquery-3.4.1.min.js"></script>
             <script src="public/js/bootstrap.min.js"></script>
