--- a/html51/bootstrap/Practic02/Boots2.html
+++ b/html51/bootstrap/Practic02/Boots2.html
@@ -20,7 +20,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Qeen Group</a></a>
+            <a class="navbar-brand" href="#">Queen Group</a></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
