--- a/html51/bootstrap/Practic02/Boots2.html
+++ b/html51/bootstrap/Practic02/Boots2.html
@@ -37,9 +37,9 @@
     <div id="Foto">
 
     </div>
-    <div class="multicolumn">
+    <div class="container-fluid">
 
-        <div class="col-xs-12 KBcol-sm-8 col-md-12 col-md-push-7">
+        <div class="col-xs-12 col-sm-8 col-md-5 col-md-offset-7">
 
             <h1>
                 Some of the best</h1>
