--- a/html51/bootstrap/Practic02/Boots2.html
+++ b/html51/bootstrap/Practic02/Boots2.html
@@ -39,7 +39,7 @@
     </div>
     <div class="container-fluid">
 
-        <div class="col-xs-12 col-sm-8 col-md-5 col-md-offset-7">
+        <div class="col-xs-12 col-sm-8 col-sm-offset-6 col-md-5 col-md-offset-7">
 
             <h1>
                 Some of the best</h1>
