--- a/html51/bootstrap/d.html
+++ b/html51/bootstrap/d.html
@@ -22,7 +22,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img id="Ft1" src="Practic02/img/Quen.jpg" class=" justify-content-center" height="50px" alt="...">
+                <img id="Ft1" src="Practic02/img/Quen.jpg" height="50px" alt="...">
                 <div class="carousel-caption">
                     fqef
                 </div>
@@ -51,8 +51,15 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-    <script src="public/js/jquery-3.4.1.min.js"></script>
-    <script src="public/js/bootstrap.min.js"></script>
+    <ol class="breadcrumb">
+
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Library</a></li>
+            <li class="breadcrumb-item active">Data</li>
+        </ol>
+        <script src="public/js/jquery-3.4.1.min.js"></script>
+        <script src="public/js/bootstrap.min.js"></script>
 </body>
 
 </html>
