--- a/html51/bootstrap/d.html
+++ b/html51/bootstrap/d.html
@@ -15,19 +15,19 @@
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#caro usel-example-generic" data-slide-to="1"></li>
             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
         </ol>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img id="Ft1" src="Practic02/img/Quen.jpg" height="50px" alt="...">
+                <img id="Ft1" src="" height="50px" alt="...">
                 <div class="carousel-caption">
                     fqef
                 </div>
             </div>
-            <div class="item">
+            <div class="item" style="text-align: center;">
                 <img src="Practic02/img/Quen.jpg" lt="...">
                 <div class="carousel-caption">
                     ...
