--- a/html51/bootstrap/Practic02/Boots2.html
+++ b/html51/bootstrap/Practic02/Boots2.html
@@ -12,28 +12,49 @@
 <body>
 
 
+
     <nav class="navbar navbar-inverse" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
             <a class="navbar-brand" href="#">Queen Group</a></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">History</a></li>
-                <li><a href="#">Members</a></li>
+                <li class="dropdown">
+                    <a href="#" data-toggle="dropdown" class="dropdown-toggle">
+                        History
+                        <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Funny Stories</a></li>
+                        <li><a href="#">Scenes</a></li>
+                    </ul>
+                </li>
+                <li class="drobdown">
+                    <a href="#" data-toggle="dropdown" class="dropdown-toggle">
+                        Members
+                        <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Funny Stories</a></li>
+                        <li><a href="#">Scenes</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">Top Songs</a></li>
             </ul>
         </div>
 
     </nav>
+
+
 
 
     <div id="Foto">
@@ -63,6 +84,7 @@
     </div>
     <script src="public/js/jquery-3.4.1.min.js "></script>
     <script src="public/js/bootstrap.min.js "></script>
+
 </body>
 
 </html>
