--- a/html51/bootstrap/Practic02/Boots2.html
+++ b/html51/bootstrap/Practic02/Boots2.html
@@ -44,7 +44,7 @@
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Funny Stories</a></li>
+                        <li><a href="#"></a></li>
                         <li><a href="#">Scenes</a></li>
                     </ul>
                 </li>
