--- a/html51/bootstrap/PracFrom/Form.html
+++ b/html51/bootstrap/PracFrom/Form.html
@@ -1,57 +1,107 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
+    <title></title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="public/css/bootstrap.min.css">
-    <title>Document</title>
-    <style>
-        #demo01 {
-            visibility: hidden;
-        }
-    </style>
-    <script>
-        function display_alert() {
-            demo01.style.visibility = "visible";
-        }
-    </script>
 </head>
 
 <body>
 
     <div class="jumbotron">
         <div class="container">
-            <h1>Form</h1>
+            <h1>Регистрация</h1>
+
         </div>
     </div>
-    <div class="countainer">
+
+    <div class="container">
+
         <div class="row">
-            <div class="col-md-9">
-                <form class="form-horizontal" role="form" action="" method="post">
-                    <legend>Регистрация </legend>
+            <div class="col-md-10">
+                <form class="form-horizontal">
+                    <legend>Регистрация участника</legend>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-3">Как в Вам обращаться?</label>
+                        <div class="col-md-5">
+                            <select class="form-control">
+                            <option value="1">Mr</option>
+                            <option value="2">Mrs</option>
+                          
+                        </select>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-3" for="first_last_name">Фамилия и имя</label>
+                        <div class="col-md-5">
+                            <input class="form-control" placeholder="Билл Гейтс" id="Name" required="required" />
+                        </div>
+                    </div>
+
+                    <div class=" form-group">
+                        <label class="control-label col-md-3" for="company">Компания (учебное заведение)</label>
+                        <div class="col-md-5">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <span class="glyphicon glyphicon-education "></span>
+                                </div>
+                                <input class="form-control" type="text" placeholder="Rf" required="required" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-3" for="email">E-mail</label>
+                        <div class="col-md-5">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <span class="glyphicon glyphicon-envelope "></span>
+                                </div>
+                                <input class="form-control" id="email" type="email" placeholder="Name@mail.com" required="required" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-3">Должность</label>
+                        <div class="col-md-5">
+                            <input class="form-control" type="text" placeholder="Менеджер" required="required" />
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label col-md-3" for="city">Город</label>
+                        <div class="col-md-5">
+                            <div class="input-group">
+                                <div class="input-group-addon">
+                                    <span class="glyphicon glyphicon-home"></span>
+                                </div>
+                                <input class="form-control" id="city" type="text" placeholder="г. Каменец" required/>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3" for="feedback">
+                        Немного о себе</label>
+                        <div class="col-md-5">
+                            <textarea rows="8" class="form-control "></textarea>
+                        </div>
+                    </div>
+
+                    <button type="submit " class="btn btn-primary col-md-offset-7 ">Submit</button>
                 </form>
 
-                <div class="form-group">
-                    <label class="control-label col-md-3" for="greet1">Как в Вам обращаться?</label>
-                    <div class="col-md-6">
-                        <select class="form-control" id="greet1">
-                        <option value="1">Mr</option>
-                        <option value="2">Mrs</option>
-                        <option value="3">Hidden</option>
-                    </select>
-                    </div>
-                </div>
-
             </div>
+
         </div>
 
     </div>
 
-
-
-    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js "></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js "></script>
 </body>
 
 </html>
