--- a/html51/bootstrap/index.html
+++ b/html51/bootstrap/index.html
@@ -8,96 +8,35 @@
 </head>
 
 <body>
+    <div class="col-md-10">
+        <div class="jumbotron col-md-6 col-md-offset-3">
+            <div class="container ">
+                <h3>Форма</h3>
+            </div>
+        </div>
 
-    <div class="jumbotron">
         <div class="container">
-            <h1>Регистрация</h1>
+            <div class="col-md-8">
+                <form action="" class="horizaontal-form">
+                    <legend>Регистрация</legend>
+                </form>
+            </div>
+        </div>
 
+
+        <label for="" class="col-md-3">Here</label>
+        <div class="input-group">
+            <div class="input-group-addon">
+                <span class="glyphicon glyphicon-education "></span>
+            </div>
+            <div class="col-md-4">
+                <select name="Rich" id="input" class="form-control" required="required">
+        <option value="1">re</option>
+        <option value="2">rfr</option>
+    </select>
+            </div>
         </div>
     </div>
-
-    <div class="container">
-
-        <div class="row">
-            <div class="col-md-10">
-                <form class="form-horizontal">
-                    <legend>Регистрация участника</legend>
-
-                    <div class="form-group">
-                        <label class="control-label col-md-3">Как в Вам обращаться?</label>
-                        <div class="col-md-5">
-                            <select class="form-control">
-                            <option value="1">Mr</option>
-                            <option value="2">Mrs</option>
-                          
-                        </select>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="control-label col-md-3" for="first_last_name">Фамилия и имя</label>
-                        <div class="col-md-5">
-                            <input class="form-control" placeholder="Билл Гейтс" id="Name" required="required" />
-                        </div>
-                    </div>
-
-                    <div class=" form-group">
-                        <label class="control-label col-md-3" for="company">Компания (учебное заведение)</label>
-                        <div class="col-md-5">
-                            <div class="input-group">
-                                <div class="input-group-addon">
-                                    <span class="glyphicon glyphicon-education "></span>
-                                </div>
-                                <input class="form-control" type="text" placeholder="НафтоГаз" required="required" />
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="control-label col-md-3" for="email">E-mail</label>
-                        <div class="col-md-5">
-                            <div class="input-group">
-                                <div class="input-group-addon">
-                                    <span class="glyphicon glyphicon-envelope "></span>
-                                </div>
-                                <input class="form-control" id="email" type="email" placeholder="Name@mail.com" required="required" />
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="control-label col-md-3">Должность</label>
-                        <div class="col-md-5">
-                            <input class="form-control" type="text" placeholder="Менеджер" required="required" />
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="control-label col-md-3" for="city">Город</label>
-                        <div class="col-md-5">
-                            <div class="input-group">
-                                <div class="input-group-addon">
-                                    <span class="glyphicon glyphicon-home"></span>
-                                </div>
-                                <input class="form-control" id="city" type="text" placeholder="г. Каменец" required/>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-3" for="feedback">
-                        Немного о себе</label>
-                        <div class="col-md-5">
-                            <textarea rows="8" class="form-control "></textarea>
-                        </div>
-                    </div>
-
-                    <button type="submit " class="btn btn-primary col-md-offset-7 ">Submit</button>
-                </form>
-
-            </div>
-
-        </div>
-
     </div>
 
     <script src="/node_modules/jquery/dist/jquery.min.js "></script>
